--- a/tarea 3/tarea3.html
+++ b/tarea 3/tarea3.html
@@ -11,35 +11,35 @@
         <h2 class="clases">Clase 1</h2>
         <input type="text" placeholder="Horas totales de la clase" class="hora-clase"/>
         <input type="text" placeholder="Minutos totales de la clase" class="minutos-clase"/>
-        <input type="text" placeholder="Segundos totales de la clase" id="segundos-clase"/>
+        <input type="number" placeholder="Segundos totales de la clase" class="segundos-clase"/>
     </form>
 
     <form id="calculo-tiempo-total-clase-2">
         <h2 class="clases">Clase 2</h2>
         <input type="text" placeholder="Horas totales de la clase" class="hora-clase"/>
         <input type="text" placeholder="Minutos totales de la clase" class="minutos-clase"/>
-        <input type="text" placeholder="Segundos totales de la clase" class="segundos-clase"/>
+        <input type="number" placeholder="Segundos totales de la clase" class="segundos-clase"/>
     </form>
 
     <form id="calculo-tiempo-total-clase-3">
         <h2 class="clases">Clase 3</h2>
         <input type="text" placeholder="Horas totales de la clase" class="hora-clase"/>
         <input type="text" placeholder="Minutos totales de la clase" class="minutos-clase"/>
-        <input type="text" placeholder="Segundos totales de la clase" class="segundos-clase"/>
+        <input type="number" placeholder="Segundos totales de la clase" class="segundos-clase"/>
     </form>
 
     <form id="calculo-tiempo-total-clase-4">
         <h2 class="clases">Clase 4</h2>
         <input type="text" placeholder="Horas totales de la clase" class="hora-clase"/>
         <input type="text" placeholder="Minutos totales de la clase" class="minutos-clase"/>
-        <input type="text" placeholder="Segundos totales de la clase" class="segundos-clase"/>
+        <input type="number" placeholder="Segundos totales de la clase" class="segundos-clase"/>
     </form>
 
     <form id="calculo-tiempo-total-clase-5">
         <h2 class="clases">Clase 5</h2>
         <input type="text" placeholder="Horas totales de la clase" class="hora-clase"/>
         <input type="text" placeholder="Minutos totales de la clase" class="minutos-clase"/>
-        <input type="text" placeholder="Segundos totales de la clase" class="segundos-clase"/>
+        <input type="number" placeholder="Segundos totales de la clase" class="segundos-clase"/>
     </form>
 
     <input type="submit" value="Calcular" id="calcular" onsubmit="return false;"/>
