--- a/tarea 3/tarea3.html
+++ b/tarea 3/tarea3.html
@@ -2,47 +2,47 @@
 <html>
 <head>
     <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <meta h ttp-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Clase 5 tarea 3</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>    
 </head>
 <body>
     <form id="calculo-tiempo-total-clase-1">
         <h2 class="clases">Clase 1</h2>
-        <input type="text" placeholder="Horas totales de la clase" class="hora-clase"/>
-        <input type="text" placeholder="Minutos totales de la clase" class="minutos-clase"/>
+        <input type="number" placeholder="Horas totales de la clase" class="hora-clase"/>
+        <input type="number" placeholder="Minutos totales de la clase" class="minutos-clase"/>
         <input type="number" placeholder="Segundos totales de la clase" class="segundos-clase"/>
     </form>
 
     <form id="calculo-tiempo-total-clase-2">
         <h2 class="clases">Clase 2</h2>
-        <input type="text" placeholder="Horas totales de la clase" class="hora-clase"/>
-        <input type="text" placeholder="Minutos totales de la clase" class="minutos-clase"/>
+        <input type="number" placeholder="Horas totales de la clase" class="hora-clase"/>
+        <input type="number" placeholder="Minutos totales de la clase" class="minutos-clase"/>
         <input type="number" placeholder="Segundos totales de la clase" class="segundos-clase"/>
     </form>
 
     <form id="calculo-tiempo-total-clase-3">
         <h2 class="clases">Clase 3</h2>
-        <input type="text" placeholder="Horas totales de la clase" class="hora-clase"/>
-        <input type="text" placeholder="Minutos totales de la clase" class="minutos-clase"/>
+        <input type="number" placeholder="Horas totales de la clase" class="hora-clase"/>
+        <input type="number" placeholder="Minutos totales de la clase" class="minutos-clase"/>
         <input type="number" placeholder="Segundos totales de la clase" class="segundos-clase"/>
     </form>
 
     <form id="calculo-tiempo-total-clase-4">
         <h2 class="clases">Clase 4</h2>
-        <input type="text" placeholder="Horas totales de la clase" class="hora-clase"/>
-        <input type="text" placeholder="Minutos totales de la clase" class="minutos-clase"/>
+        <input type="number" placeholder="Horas totales de la clase" class="hora-clase"/>
+        <input type="number" placeholder="Minutos totales de la clase" class="minutos-clase"/>
         <input type="number" placeholder="Segundos totales de la clase" class="segundos-clase"/>
     </form>
 
     <form id="calculo-tiempo-total-clase-5">
         <h2 class="clases">Clase 5</h2>
-        <input type="text" placeholder="Horas totales de la clase" class="hora-clase"/>
-        <input type="text" placeholder="Minutos totales de la clase" class="minutos-clase"/>
+        <input type="number" placeholder="Horas totales de la clase" class="hora-clase"/>
+        <input type="number" placeholder="Minutos totales de la clase" class="minutos-clase"/>
         <input type="number" placeholder="Segundos totales de la clase" class="segundos-clase"/>
     </form>
 
-    <input type="submit" value="Calcular" id="calcular" onsubmit="return false;"/>
+    <input type="submit" value="Calcular" id="calcular"/>
 
     <div id="resultado"></div>
 
