--- a/tarea-4/tarea-4.html
+++ b/tarea-4/tarea-4.html
@@ -5,10 +5,25 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Page Title</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script>
 </head>
 <body>
+    <form>
+        <ol>
+            <li>32</li>
+            <li>44</li>
+            <li>42</li>
+            <li>54</li>
+            <li>36</li>
+            <li>21</li>    
+            <li>36</li>
+            <li>24</li>
+        </ol>
+
+        <div id="promedio"><span></span></div>
+    </form>
+
     
+
+    <script src='tarea-4.js'></script>
 </body>
 </html>
