--- a/tarea-4/tarea-4.html
+++ b/tarea-4/tarea-4.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
+    <title>Clase 5 tarea 4</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
 </head>
 <body>
@@ -19,7 +19,7 @@
             <li>24</li>
         </ol>
 
-        <div id="promedio"><span></span></div>
+        <div id="promedio"></div>
     </form>
 
     
